--- a/MonogameLibrary/MonogameLibrary.csproj
+++ b/MonogameLibrary/MonogameLibrary.csproj
@@ -1,17 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="nkast.Xna.Framework" Version="3.11.9002" />
-        <PackageReference Include="nkast.Xna.Framework.Content" Version="3.11.9002" />
-        <PackageReference Include="MonoGame.Framework.DesktopGL.9000" Version="3.11.9002" />
-        <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.11.9002" />
-        <PackageReference Include="nkast.Xna.Framework.Graphics" Version="3.11.9002" />
+      <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
       <PackageReference Include="SharpZipLib" Version="1.4.2" />
     </ItemGroup>
 
