--- a/ZoFo/ZoFo.csproj
+++ b/ZoFo/ZoFo.csproj
@@ -32,6 +32,7 @@
       <ProjectReference Include="..\MonogameLibrary\MonogameLibrary.csproj" />
     </ItemGroup>
     <ItemGroup>
+      <Folder Include="Content\sounds\Zombie\" />
       <Folder Include="Content\Textures\GUI\" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
