--- a/ZoFo/ZoFo.csproj
+++ b/ZoFo/ZoFo.csproj
@@ -33,6 +33,7 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Content\sounds\Zombie\" />
+      <Folder Include="Content\Textures\Animations\PlayerAFK\" />
       <Folder Include="Content\Textures\GUI\" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
