--- a/AnimatorFileCreatorAdvanced/AnimatorFileCreatorAdvanced.csproj
+++ b/AnimatorFileCreatorAdvanced/AnimatorFileCreatorAdvanced.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MonogameLibrary\MonogameLibrary.csproj" />
+    <ProjectReference Include="..\ZoFo\ZoFo.csproj" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
