--- a/ZoFo/ZoFo.csproj
+++ b/ZoFo/ZoFo.csproj
@@ -12,10 +12,13 @@
     </PropertyGroup>
     <ItemGroup>
       <Compile Remove="Content\sounds\Zombie\**" />
+      <Compile Remove="Content\Textures\Animations\PlayerAFK\**" />
       <Compile Remove="GameCore\GameObjects\BaseClasses\**" />
       <EmbeddedResource Remove="Content\sounds\Zombie\**" />
+      <EmbeddedResource Remove="Content\Textures\Animations\PlayerAFK\**" />
       <EmbeddedResource Remove="GameCore\GameObjects\BaseClasses\**" />
       <None Remove="Content\sounds\Zombie\**" />
+      <None Remove="Content\Textures\Animations\PlayerAFK\**" />
       <None Remove="GameCore\GameObjects\BaseClasses\**" />
     </ItemGroup>
     <ItemGroup>
@@ -37,7 +40,6 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Content\sounds\Zombie\" /> 
-      <Folder Include="Content\Textures\Animations\PlayerAFK\" /> 
       <Folder Include="Content\Textures\GUI\" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
